# degiro-tools

./: .gitignore  Makefile  README.md  entrypoint.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/lint-code/: action.yml
.github/workflows/: ci.yml  workflow.yml
degiro_calculator/: __init__.py  __main__.py  cli.py
degiro_calculator/calculation/: informe.py  tax.py
degiro_calculator/domain/: __init__.py  constants.py
degiro_calculator/parsing/: __init__.py  csv_parser.py
degiro_calculator/reporting/: __init__.py  report.py
degiro_tools/: __init__.py  __main__.py  cli.py
degiro_tools/analysis/: __init__.py  geography.py  holdings.py  overlap.py  sectors.py
degiro_tools/calculation/: __init__.py  fifo.py  portfolio.py  report_data.py  tax.py
degiro_tools/domain/: __init__.py  constants.py  holdings.py  models.py  portfolio.py
degiro_tools/parsing/: __init__.py  account_parser.py  columns.py  csv_parser.py  xlsx_parser.py
degiro_tools/providers/: __init__.py  holdings_csv.py  yahoo.py
degiro_tools/providers/holdings/: __init__.py  base.py  helpers.py  ishares.py  registry.py  vanguard.py  xtrackers.py
degiro_tools/reporting/: __init__.py  analysis_report.py  report.py
degiro_tools/utils/: __init__.py  logging_config.py
tests/: conftest.py  test_fifo.py  test_holdings_analysis.py  test_holdings_parser.py  test_integration.py  test_overview.py  test_parser.py  test_portfolio.py  test_report.py  test_sectors.py  test_tax.py  test_yahoo.py
tests/fixtures/: sample.csv
