[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[project]
name = "degiro-tools"
version = "0.4.0"
description = "Calculadora IRPF (España) de ganancias/pérdidas patrimoniales desde extractos Degiro."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "rich==15.0.0",
    "polars==1.40.1",
    "yfinance==1.4.1",
    "openpyxl==3.1.5",
    "fastexcel==0.20.2",
    "defusedxml==0.7.1",
]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[tool.uv.build-backend]
module-name = "degiro_tools"
module-root = ""

[dependency-groups]
pipeline = [
    "complexipy==5.6.1",
    "mypy==2.1.0",
    "pytest==9.1.0",
    "ruff==0.15.20",
]

[project.scripts]
degiro-tools = "degiro_tools.cli:main"

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "PL", "UP", "N", "B", "I"]
ignore = [
    "PLC0415",
    "PLR0912",
    "PLR0915",
    "PLR2004",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["degiro_tools"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.isort.import-heading]
standard-library = "Standard libraries"
third-party = "3pps"
first-party = "Own modules"
local-folder = "Own modules"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/",
    ".uv-cache/"
]
cache_dir = "/dev/null"
